--- a/package.json
+++ b/package.json
@@ -13,24 +13,24 @@
   },
   "dependencies": {
     "@mdi/font": "^5.9.55",
-    "core-js": "^3.6.5",
-    "vue": "^3.0.0",
-    "vue-i18n": "^9.0.0-rc.2",
+    "core-js": "^3.9.1",
+    "vue": "^3.0.6",
+    "vue-i18n": "^9.0.0",
     "vuedraggable": "^4.0.1",
     "vuex": "^4.0.0",
-    "wave-ui": "^2.12.0"
+    "wave-ui": "^2.13.0"
   },
   "devDependencies": {
-    "@intlify/vue-i18n-loader": "^2.0.0-beta.4",
+    "@intlify/vue-i18n-loader": "^2.0.2",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
-    "@vue/compiler-sfc": "^3.0.0",
+    "@vue/compiler-sfc": "^3.0.6",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0-0",
     "standard-version": "^9.1.1",
-    "vue-cli-plugin-i18n": "^2.0.0-beta.1"
+    "vue-cli-plugin-i18n": "^2.0.0"
   },
   "eslintConfig": {
     "root": true,
