--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@mdi/font": "^5.9.55",
     "core-js": "^3.9.1",
+    "uuencode": "0.0.4",
     "vue": "^3.0.6",
     "vue-i18n": "^9.0.0",
     "vuedraggable": "^4.0.1",
