--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mausritter",
+  "name": "mausritter-sheet",
   "version": "1.1.2",
   "private": true,
   "scripts": {
@@ -25,15 +25,15 @@
   },
   "devDependencies": {
     "@intlify/vue-i18n-loader": "^2.0.3",
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
+    "@vue/cli-plugin-babel": "^4.5.12",
+    "@vue/cli-plugin-eslint": "^4.5.12",
+    "@vue/cli-service": "^4.5.12",
     "@vue/compiler-sfc": "^3.0.7",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.7.0",
     "standard-version": "^9.1.1",
-    "vue-cli-plugin-i18n": "^2.0.1"
+    "vue-cli-plugin-i18n": "^2.0.2"
   },
   "eslintConfig": {
     "root": true,
