--- a/package.json
+++ b/package.json
@@ -15,25 +15,26 @@
   },
   "dependencies": {
     "@mdi/font": "^5.9.55",
-    "core-js": "^3.9.1",
+    "core-js": "^3.10.1",
     "uuencode": "0.0.4",
-    "vue": "^3.0.7",
-    "vue-i18n": "^9.0.0",
+    "uuid": "^8.3.2",
+    "vue": "^3.0.11",
+    "vue-i18n": "^9.1.2",
     "vuedraggable": "^4.0.1",
     "vuex": "^4.0.0",
-    "wave-ui": "^2.14.1"
+    "wave-ui": "^2.16.0"
   },
   "devDependencies": {
-    "@intlify/vue-i18n-loader": "^2.0.3",
+    "@intlify/vue-i18n-loader": "^2.1.0",
     "@vue/cli-plugin-babel": "^4.5.12",
     "@vue/cli-plugin-eslint": "^4.5.12",
     "@vue/cli-service": "^4.5.12",
-    "@vue/compiler-sfc": "^3.0.7",
+    "@vue/compiler-sfc": "^3.0.11",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^7.7.0",
-    "standard-version": "^9.1.1",
-    "vue-cli-plugin-i18n": "^2.0.2"
+    "eslint-plugin-vue": "^7.8.0",
+    "standard-version": "^9.2.0",
+    "vue-cli-plugin-i18n": "^2.1.0"
   },
   "eslintConfig": {
     "root": true,
