--- a/.github/workflows/release-tauri-app.yml
+++ b/.github/workflows/release-tauri-app.yml
@@ -30,7 +30,7 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y webkit2gtk-4.0
       - run: yarn
-      - name: build nota for tauri app
+      - name: build mausritter-sheet for tauri app
         run: yarn build
       - run: cargo install tauri-bundler --force
       - name: build tauri app
@@ -57,7 +57,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: ${{ matrix.package.name }}-v${{ env.PACKAGE_VERSION }}
-          release_name: 'Release nota app v${{ env.PACKAGE_VERSION }}'
+          release_name: 'Release mausritter-sheet app v${{ env.PACKAGE_VERSION }}'
           body: 'See the assets to download this version and install.'
           draft: true
           prerelease: false
@@ -102,7 +102,7 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y webkit2gtk-4.0
       - run: yarn
-      - name: build nota for tauri app
+      - name: build mausritter-sheet for tauri app
         run: yarn build
       - run: cargo install tauri-bundler --force
       - name: build tauri app
@@ -110,7 +110,7 @@ jobs:
       - name: compress (macos only)
         if: matrix.platform == 'macos-latest'
         working-directory: ${{ format('./src-tauri/target/release/{0}', matrix.buildFolder ) }}
-        run: tar -czf ${{ format('nota{0}{1}', matrix.ext, matrix.compressed ) }} ${{ format('nota{0}', matrix.ext ) }}
+        run: tar -czf ${{ format('mausritter-sheet{0}{1}', matrix.ext, matrix.compressed ) }} ${{ format('mausritter-sheet{0}', matrix.ext ) }}
       - name: upload release asset
         id: upload-release-asset
         uses: actions/upload-release-asset@v1.0.2
@@ -118,15 +118,15 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ needs.create-release.outputs.RELEASE_UPLOAD_URL }}
-          asset_path: ${{ format('./src-tauri/target/release/{0}/nota{1}{2}', matrix.buildFolder, matrix.ext, matrix.compressed ) }}
-          asset_name: ${{ format('nota{0}{1}', matrix.ext, matrix.compressed ) }}
+          asset_path: ${{ format('./src-tauri/target/release/{0}/mausritter-sheet{1}{2}', matrix.buildFolder, matrix.ext, matrix.compressed ) }}
+          asset_name: ${{ format('mausritter-sheet{0}{1}', matrix.ext, matrix.compressed ) }}
           asset_content_type: application/zip
       - name: build tauri app in debug mode
         run: yarn tauri:build --debug
       - name: compress (macos only)
         if: matrix.platform == 'macos-latest'
         working-directory: ${{ format('./src-tauri/target/debug/{0}', matrix.buildFolder ) }}
-        run: tar -czf ${{ format('nota{0}{1}', matrix.ext, matrix.compressed ) }} ${{ format('nota{0}', matrix.ext ) }}
+        run: tar -czf ${{ format('mausritter-sheet{0}{1}', matrix.ext, matrix.compressed ) }} ${{ format('mausritter-sheet{0}', matrix.ext ) }}
       - name: upload release asset with debug mode on
         id: upload-release-asset-debug-mode
         uses: actions/upload-release-asset@v1.0.2
@@ -134,6 +134,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ needs.create-release.outputs.RELEASE_UPLOAD_URL }}
-          asset_path: ${{ format('./src-tauri/target/debug/{0}/nota{1}{2}', matrix.buildFolder, matrix.ext, matrix.compressed ) }}
-          asset_name: ${{ format('nota-debug{0}{1}', matrix.ext, matrix.compressed ) }}
+          asset_path: ${{ format('./src-tauri/target/debug/{0}/mausritter-sheet{1}{2}', matrix.buildFolder, matrix.ext, matrix.compressed ) }}
+          asset_name: ${{ format('mausritter-sheet-debug{0}{1}', matrix.ext, matrix.compressed ) }}
           asset_content_type: application/zip
