feat: Add publish

--- a/.github/workflows/release-tauri-app.yml
+++ b/.github/workflows/release-tauri-app.yml
@@ -1,11 +1,8 @@
 name: release-tauri-app
 
 on:
-  watch:
-    types: [started]
   push:
-    branches:
-      - main
+    branches: [ main ]
     paths:
       - '**/package.json'
 
