fix: dep package install

--- a/package.json
+++ b/package.json
@@ -18,10 +18,8 @@
   },
   "dependencies": {
     "@mdi/font": "^5.9.55",
-    "@tauri-apps/api": "*",
-    "@tauri-apps/cli": "*",
     "core-js": "^3.10.1",
-    "uuencode": "0.0.4",
+    "uuencode": "^0.0.4",
     "uuid": "^8.3.2",
     "vue": "^3.0.11",
     "vue-i18n": "^9.1.2",
@@ -31,6 +29,8 @@
   },
   "devDependencies": {
     "@intlify/vue-i18n-loader": "^2.1.0",
+    "@tauri-apps/api": "^1.0.0-beta-rc",
+    "@tauri-apps/cli": "^1.0.0-beta-rc",
     "@vue/cli-plugin-babel": "^4.5.12",
     "@vue/cli-plugin-eslint": "^4.5.12",
     "@vue/cli-service": "^4.5.12",
