fix: bump to latest tauri rc

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "dependencies": {
     "@mdi/font": "^5.9.55",
-    "@tauri-apps/api": "^1.0.0-beta-rc",
+    "@tauri-apps/api": "^1.0.0-beta-rc.3",
     "core-js": "^3.10.1",
     "uuencode": "^0.0.4",
     "uuid": "^8.3.2",
@@ -30,7 +30,7 @@
   },
   "devDependencies": {
     "@intlify/vue-i18n-loader": "^2.1.0",
-    "@tauri-apps/cli": "^1.0.0-beta-rc",
+    "@tauri-apps/cli": "^1.0.0-beta-rc.4",
     "@vue/cli-plugin-babel": "^4.5.12",
     "@vue/cli-plugin-eslint": "^4.5.12",
     "@vue/cli-service": "^4.5.12",
