--- a/release-tauri-app.yml
+++ b/release-tauri-app.yml
@@ -2,7 +2,7 @@ name: release-tauri-app
 
 on:
   push:
-    branches: [ main ]
+    branches: [ release ]
     paths:
       - '**/package.json'
 
@@ -26,12 +26,12 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y webkit2gtk-4.0
-      - run: yarn
+      - run: npm install
       - name: build mausritter-sheet for tauri app
-        run: yarn build
+        run: npm build
       - run: cargo install tauri-bundler --force
       - name: build tauri app
-        run: yarn tauri:build
+        run: npm build:tauri
 
   create-release:
     needs: check-build
