fix: add github action manual trigger

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,6 +3,8 @@ on:
   push:
     branches:
       - main
+  # Allow to trigger this action manually
+  workflow_dispatch:
 
 jobs:
   publish-tauri:
