fix: application name without space

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,7 +2,7 @@ name: "publish"
 on:
   push:
     branches:
-      - main
+        - main
   # Allow to trigger this action manually
   workflow_dispatch:
 
@@ -24,23 +24,19 @@ jobs:
       uses: actions-rs/toolchain@v1
       with:
         toolchain: stable
-    - name: install tauri bundler
-      run: cargo install tauri-bundler --force
     - name: install webkit2gtk (ubuntu only)
       if: matrix.platform == 'ubuntu-latest'
       run: |
         sudo apt-get update
         sudo apt-get install -y webkit2gtk-4.0
     - name: install app dependencies and build it
-    # If using the Vue CLI plugin, tauri:build will be run automatically by tauri-action
-    # and you can remove `&& yarn build` from this command
       run: yarn && yarn build
-    - uses: tauri-apps/tauri-action@dev
+    - uses: tauri-apps/tauri-action@v0
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         tagName: app-v__VERSION__ # the action automatically replaces \_\_VERSION\_\_ with the app version
-        releaseName: "App v__VERSION__"
+        releaseName: "Applicaton nelease v__VERSION__"
         releaseBody: "See the assets to download this version and install."
         releaseDraft: true
         prerelease: false
