--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,7 +11,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        platform: [macos-latest, ubuntu-latest, windows-latest]
+        # platform: [macos-latest, ubuntu-18.04, windows-latest]
+        platform: [ubuntu-18.04]
 
     runs-on: ${{ matrix.platform }}
     steps:
@@ -25,7 +26,7 @@ jobs:
       with:
         toolchain: stable
     - name: install webkit2gtk (ubuntu only)
-      if: matrix.platform == 'ubuntu-latest'
+      if: matrix.platform == 'ubuntu-18.04'
       run: |
         sudo apt-get update
         sudo apt-get install -y webkit2gtk-4.0
