--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -25,6 +25,8 @@ jobs:
       uses: actions-rs/toolchain@v1
       with:
         toolchain: stable
+    - name: install tauri bundler
+      run: cargo install tauri-bundler --force
     - name: install webkit2gtk (ubuntu only)
       if: matrix.platform == 'ubuntu-18.04'
       run: |
