--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,7 +2,7 @@ name: "publish"
 on:
   push:
     branches:
-      - main
+      - release
   # Allow to trigger this action manually
   workflow_dispatch:
 
