--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -24,6 +24,9 @@ jobs:
       uses: actions-rs/toolchain@v1
       with:
         toolchain: stable
+    - uses: Swatinem/rust-cache@v1
+      with:
+        working-directory: src-tauri
     - name: install webkit2gtk (ubuntu only)
       if: matrix.platform == 'ubuntu-latest'
       run: |
@@ -37,6 +40,6 @@ jobs:
       with:
         tagName: app-v__VERSION__ # the action automatically replaces \_\_VERSION\_\_ with the app version
         releaseName: "Application release v__VERSION__"
-        releaseBody: "See the assets to download this version and install."
+        releaseBody: "See the assets to download this version. These binaries are only for testing and still have bugs."
         releaseDraft: true
         prerelease: false
