--- a/package.json
+++ b/package.json
@@ -18,29 +18,29 @@
   },
   "dependencies": {
     "@mdi/font": "^5.9.55",
-    "@tauri-apps/api": "^1.0.0-beta-rc.3",
-    "core-js": "^3.10.1",
+    "@tauri-apps/api": "^1.0.0-beta.5",
+    "core-js": "^3.16.1",
     "hash.js": "^1.1.7",
     "uuencode": "^0.0.4",
     "uuid": "^8.3.2",
-    "vue": "^3.0.11",
-    "vue-i18n": "^9.1.2",
-    "vuedraggable": "^4.0.1",
-    "vuex": "^4.0.0",
-    "wave-ui": "^2.16.0"
+    "vue": "^3.2.2",
+    "vue-i18n": "^9.1.7",
+    "vuedraggable": "^4.0.3",
+    "vuex": "^4.0.2",
+    "wave-ui": "^2.23.0"
   },
   "devDependencies": {
-    "@intlify/vue-i18n-loader": "^2.1.0",
-    "@tauri-apps/cli": "^1.0.0-beta-rc.4",
+    "@intlify/vue-i18n-loader": "^2.1.2",
+    "@tauri-apps/cli": "^1.0.0-beta.6",
     "@vue/cli-plugin-babel": "^4.5.12",
     "@vue/cli-plugin-eslint": "^4.5.12",
     "@vue/cli-service": "^4.5.12",
-    "@vue/compiler-sfc": "^3.0.11",
+    "@vue/compiler-sfc": "^3.2.2",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^7.8.0",
-    "standard-version": "^9.2.0",
-    "vue-cli-plugin-i18n": "^2.1.0"
+    "eslint-plugin-vue": "^7.16.0",
+    "standard-version": "^9.3.1",
+    "vue-cli-plugin-i18n": "^2.1.3"
   },
   "eslintConfig": {
     "root": true,
