--- a/package.json
+++ b/package.json
@@ -57,8 +57,12 @@
     "rules": {}
   },
   "resolutions": {
-    "trim-newlines": "^3.0.1",
-    "glob-parent": "^5.1.2"
+    "ansi-regex": "^5.0.1",
+    "glob-parent": "^5.1.2",
+    "nth-check": "^2.0.1",
+    "semver-regex": "^3.1.3",
+    "set-value": "^4.0.1",
+    "trim-newlines": "^3.0.1"
   },
   "browserslist": [
     "> 1%",
