--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "mausritter-sheet",
   "version": "1.10.1",
   "private": true,
+  "license": "GPL-3.0",
   "scripts": {
     "serve": "vue-cli-service serve --port 8801",
     "serve:docker": "docker run -it -p 8765:8765 mausritter-sheet",
