--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "mausritter-sheet",
-  "version": "1.10.1",
+  "version": "1.10.6",
   "private": true,
-  "license": "GPL-3.0",
+  "license": "Mausritter Third Party Licence",
   "scripts": {
     "serve": "vue-cli-service serve --port 8801",
     "serve:docker": "docker run -it -p 8765:8765 mausritter-sheet",
@@ -57,17 +57,14 @@
     },
     "rules": {}
   },
-  "resolutions": {
-    "ansi-regex": "^5.0.1",
-    "glob-parent": "^5.1.2",
-    "nth-check": "^2.0.1",
-    "semver-regex": "^3.1.3",
-    "set-value": "^4.0.1",
-    "trim-newlines": "^3.0.1"
-  },
   "browserslist": [
     "> 1%",
     "last 2 versions",
     "not dead"
-  ]
+  ],
+  "resolutions": {
+    "ansi-regex": "^5.0.1",
+    "glob-parent": ">=5.2.0",
+    "nth-check": "^2.0.1"
+  }
 }
